# openwritr-windows

./: .gitignore  Cargo.toml  LICENSE  PRIVACY.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md  build.rs  index.html  models-manifest.json  package.json  release-manifest.json  runtime-manifest.json  vite.config.js
.github/workflows/: build.yml
docs/: OVERVIEW.md  RUNTIME_COMPATIBILITY.md  STREAMING.md  build.yml.workflow-template  index.html  plan.md
examples/: test_npu_ffi.rs
installer/: AppxManifest.template.xml  make_icon.py  openwritr-x64.iss  openwritr.iss
python/: README.md  engine.py  enhance.py  fetch_model.py  fetch_whisper.py  openwritr.py  overlay.py  requirements.txt  settings_launcher.py  settings_window.py  sounds.py  start.cmd  whisper_npu.py
scripts/: README.md  aihub_compile_encoder.py  bench.py  bench_htp_int8.py  bench_nexa_parakeet.ps1  bench_npu_only.py  bench_npu_vs_cpu.py  bench_quality.py  build_msix.ps1  build_npu_encoder.py  envup.ps1  export_parakeet_onnx.py  fetch_fleurs.py  fetch_runtime.py  fetch_x64_ort.py  make_banner.py  prepare_release.py  publish_npu_encoder.py  qnn_fp32_smoke.py  qnn_smoke.py  quantize_qdq.py  quantize_qdq_fleurs.py  smoke_whisper.py  test_npu_encoder.py  verify_artifact.py  wrap_qnn_context_binary.py  wsl_export_streaming.py  wsl_load_parakeet.py  wsl_setup_nemo.sh  wsl_verify_nemo.py
src/: app.rs  audio.rs  credentials.rs  diagnostics.rs  download.rs  enhance.rs  hotkey.rs  key_hook.rs  main.rs  model_manager.rs  overlay.rs  paste.rs  paths.rs  self_check.rs  settings.rs  settings_ui.rs  single_instance.rs  sounds.rs  tray.rs  worker.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs  state.rs
src-tauri/src/asr/: mel.rs  mod.rs  resample.rs  tdt.rs  tokenizer.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/enhance/: mod.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/paste/: mod.rs
src/asr/: mod.rs  ort_helpers.rs  parakeet.rs  qnn_ffi.rs  resample.rs  tdt.rs  tokenizer.rs  whisper_decoder.rs  whisper_mel.rs  whisper_npu.rs  whisper_tokenizer.rs
