[package]
name = "openwritr"
version = "0.3.0"
edition = "2021"
description = "Native push-to-talk voice-to-text for Windows on ARM"
license = "MIT"
repository = "https://github.com/trsdn/openwritr-windows"
rust-version = "1.85"

[[bin]]
name = "openwritr"
path = "src/main.rs"

[[bin]]
name = "package"
path = "src/bin/package.rs"

[dependencies]
# Tray + window event loop
tray-icon = "0.20"
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }

# Settings window UI (egui via eframe)
eframe = { version = "0.30", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.30"

# Hotkey + audio + paste
global-hotkey = "0.7"
cpal = "0.16"
arboard = "3"
enigo = "0.6"

# Packaging
zip = { version = "2", default-features = false, features = ["deflate"] }

# ASR — ONNX Runtime via dynamic loading (shared DLLs with Python ORT)
# api-22 unlocks register_ep_library + with_auto_device for native NPU.
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["load-dynamic", "ndarray", "std", "api-24"] }
ndarray = "0.17"
hf-hub = { version = "0.4", default-features = false, features = ["rustls-tls", "ureq"] }
sentencepiece = "0.11"

# Audio preprocessing
rubato = "0.16"
realfft = "3"

# HTTP for enhance (Copilot / OpenAI)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
keyring = "3"

# Image / icon helpers
image = { version = "0.25", default-features = false, features = ["png"] }

# Settings + logging
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
parking_lot = "0.12"
once_cell = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_Media_Audio",
] }
windows-sys = { version = "0.59", features = ["Win32_Foundation"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
incremental = false

[profile.dev]
opt-level = 1
