[package]
name = "openwritr"
version = "0.1.0"
edition = "2021"
description = "Push-to-talk voice-to-text for Windows on ARM"
license = "MIT"
repository = "https://github.com/trsdn/openwritr-windows"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
once_cell = "1"
crossbeam-channel = "0.5"

# Audio capture
cpal = "0.15"
ringbuf = "0.4"
hound = "3"  # WAV for debug dumps

# Audio preprocessing
rubato = "0.16"          # resampling (any sr -> 16 kHz)
realfft = "3"            # real-valued FFT for STFT
apodize = "1"            # window functions (hann)

# Tokenizer
sentencepiece = "0.11"

# Global hotkey
global-hotkey = "0.5"

# Paste
enigo = "0.2"
arboard = "3"

# Secrets
keyring = "3"

# HTTP for enhance providers
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# ASR runtime — ONNX Runtime with QNN, DirectML, CPU EPs.
# `ort` 2.x exposes `qnn` and `directml` features; the QNN provider DLL ships with the
# Snapdragon ONNX Runtime distribution and is loaded at runtime.
ort = { version = "2.0.0-rc.4", default-features = false, features = ["load-dynamic", "ndarray"] }
ndarray = "0.16"

[features]
default = []
# Build-time toggles for the inference backends. At runtime we always probe
# QNN -> DirectML -> CPU in order regardless of these flags.
qnn = []
directml = []

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
